feat: done postgres handler, added Dockerfile, docker-compose.yaml and Makefile
todo:
1) add mysql handler (ilgizjan)
