# internal/handler/postgres/handler.go
@@ -5,6 +5,7 @@ import (
 	"database/sql"
 	"db-dashboards/internal/domain/entity/postgres"
 	"db-dashboards/internal/handler/mapper"
+	"encoding/json"
 	"fmt"
 	"github.com/go-chi/chi/v5"
 	"github.com/go-chi/render"
@@ -55,7 +56,10 @@ func (h *Handler) Routes() *chi.Mux {
 
 	router.Group(func(r chi.Router) {
 		r.Use(h.Middlewares...)
+
 		r.Get("/tables", h.GetAllTables)
+		r.Get("/columns", h.GetColumnsFromTable)
+		r.Get("/data", h.GetAllRowsFromTable)
 	})
 
 	return router
@@ -89,6 +93,7 @@ func (h *Handler) GetAllTables(rw http.ResponseWriter, req *http.Request) {
 		return
 	}
 
+	// TODO: ping db first
 	repo := postgresrepo.New(sqlx.NewDb(conn, "postgres"))
 
 	tables, err := h.Service.GetAllTables(req.Context(), repo)
@@ -101,5 +106,118 @@ func (h *Handler) GetAllTables(rw http.ResponseWriter, req *http.Request) {
 	}
 
 	render.JSON(rw, req, sliceutils.Map(tables, mapper.MapTableToTableResponse))
+	rw.WriteHeader(http.StatusOK)
+}
+
+// GetColumnsFromTable godoc
+//
+//		@Summary		Get all columns from table
+//		@Description	Get all columns from table
+//		@Security		JWT
+//		@Tags			Postgres
+//	 	@Param 			connection-string 	header 	string true "connection string"
+//	 	@Param 			table-name 	header 	string true "name of the table"
+//		@Produce		json
+//		@Success		200	{object}	[]response.GetColumnsResponse
+//		@Failure		401	{string}	Unauthorized
+//		@Router			/db-dashboards/api/v1/postgres/columns [get]
+func (h *Handler) GetColumnsFromTable(rw http.ResponseWriter, req *http.Request) {
+	connStr, err := handlerutils.GetStringHeaderByKey(req, "connection-string")
+	if err != nil {
+		msg := "no connection string header provided"
+
+		handlerutils.WriteErrResponseAndLog(rw, h.logger, http.StatusBadRequest, msg, msg)
+		return
+	}
+
+	conn, err := sql.Open("pgx", connStr)
+	if err != nil {
+		msg := fmt.Sprintf("cannot connect to db with conn str: %v", connStr)
+
+		handlerutils.WriteErrResponseAndLog(rw, h.logger, http.StatusBadRequest, msg, msg)
+		return
+	}
+
+	repo := postgresrepo.New(sqlx.NewDb(conn, "postgres"))
+
+	tableName, err := handlerutils.GetStringHeaderByKey(req, "table-name")
+	if err != nil {
+		msg := "no connection string header provided"
+
+		handlerutils.WriteErrResponseAndLog(rw, h.logger, http.StatusBadRequest, msg, msg)
+		return
+	}
+
+	columns, err := h.Service.GetColumnsFromTable(req.Context(), repo, tableName)
+	if err != nil {
+		msg := fmt.Sprintf("cannot fetch columns from db")
+
+		handlerutils.WriteErrResponseAndLog(rw, h.logger, http.StatusBadRequest, msg, msg)
+		return
+	}
+
+	render.JSON(rw, req, sliceutils.Map(columns, mapper.MapColumnToColumnResponse))
+	rw.WriteHeader(http.StatusOK)
+}
+
+// GetAllRowsFromTable godoc
+//
+//		@Summary		Get all data from table
+//		@Description	Get all data from table
+//		@Security		JWT
+//		@Tags			Postgres
+//	 	@Param 			connection-string 	header 	string true "connection string"
+//	 	@Param 			table-name 	header 	string true "name of the table"
+//		@Produce		json
+//		@Success		200	{object}	[]response.GetColumnsResponse
+//		@Failure		401	{string}	Unauthorized
+//		@Router			/db-dashboards/api/v1/postgres/data [get]
+func (h *Handler) GetAllRowsFromTable(rw http.ResponseWriter, req *http.Request) {
+	connStr, err := handlerutils.GetStringHeaderByKey(req, "connection-string")
+	if err != nil {
+		msg := "no connection string header provided"
+
+		handlerutils.WriteErrResponseAndLog(rw, h.logger, http.StatusBadRequest, msg, msg)
+		return
+	}
+
+	conn, err := sql.Open("pgx", connStr)
+	if err != nil {
+		msg := fmt.Sprintf("cannot connect to db with conn str: %v", connStr)
+
+		handlerutils.WriteErrResponseAndLog(rw, h.logger, http.StatusBadRequest, msg, msg)
+		return
+	}
+
+	repo := postgresrepo.New(sqlx.NewDb(conn, "postgres"))
+
+	tableName, err := handlerutils.GetStringHeaderByKey(req, "table-name")
+	if err != nil {
+		msg := "no connection string header provided"
+
+		handlerutils.WriteErrResponseAndLog(rw, h.logger, http.StatusBadRequest, msg, msg)
+		return
+	}
+
+	rows, err := h.Service.GetAllRowsFromTable(req.Context(), repo, tableName)
+	if err != nil {
+		msg := fmt.Sprintf("cannot fetch columns from db")
+
+		handlerutils.WriteErrResponseAndLog(rw, h.logger, http.StatusBadRequest, msg, msg)
+		return
+	}
+
+	bytes, err := json.Marshal(rows)
+	if err != nil {
+		msg := fmt.Sprintf("cannot marshall rows to json")
+
+		handlerutils.WriteErrResponseAndLog(rw, h.logger, http.StatusBadRequest, msg, msg)
+		return
+	}
+
+	if _, err = rw.Write(bytes); err != nil {
+		return
+	}
+
 	rw.WriteHeader(http.StatusOK)
 }
