# internal/handler/response/get_columns.go
@@ -1,0 +1,6 @@
+package response
+
+type GetColumnsResponse struct {
+	Name string `json:"name"`
+	Type string `json:"type"`
+}
